index, catalog, js_version 29 03 2017

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8">
 	<link href="css/normalize.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script src="js/scripts.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:700,900,500&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 	<title>GllacyShop</title>
 </head>
@@ -24,7 +23,7 @@
 									<ul class="main-menu-list">
 				        		<li>
 					            <a href="#">Каталог</a>
-												<ul class="sub-menu catalog-sub">
+									<ul class="sub-menu catalog-sub">
 									        <li><a class="new" href="#"><b>Новинки</b></a></li>
 									        <li><a href="catalog.html">Сливочное</a></li>
 									        <li><a href="#">Щербеты</a></li>
@@ -37,16 +36,16 @@
 				    			</ul>
 							</nav>
 							<nav class="user-menu">
-								<h2 class="visually-hidden">Навигация по сайту для пользователя</h2> 
+								<h2 class="visually-hidden">Навигация по сайту для пользователя</h2>
 									<ul class="user-menu-list">
 										<li class="btn search">
 											<a href="#">Поиск</a>
 												<div class="modal modal-search">
 													<form name="search" action="https://echo.htmlacademy.ru" method="get">
-														<label for="search" class="visually-hidden">Поиск</label> 
+														<label for="search" class="visually-hidden">Поиск</label>
 														<input class="input-search" id="search" type="text" name="search" placeholder="Что ищем?"><img src="img/svg-gllacy/loupe.svg" alt="Поиск">
 													</form>
-												</div>	
+												</div>
 										</li>
 										<li class="btn login"><a href="#">Вход</a></li>
 										<li class="btn basket"><a href="#">Пусто</a></li>
@@ -60,7 +59,7 @@
 				        <span>8 812 450-25-25</span>
 			       	</p>
 						</div>
-					</header>	
+					</header>
 
 			<!--2.***ОСНОВНОЙ РАЗДЕЛ САЙТА***-->
 				<!--2.1 Слайдеры-->
@@ -90,92 +89,92 @@
 		          <a class="button slide-button" href="#">Давайте оба!</a>
 		        </li>
 		      </ul>
-		     </section> 
+		     </section>
 
 					<!--2.2 Баннеры-->
 					<section class="banner-wrapper">
 						<div class="banner banner-left">
 								<h2 class="visually-hidden">Акционные предложения по наполнителям к мороженому</h2> <!--Скрытый заголовок-->
 									<h3>Малинки даром!</h3>
-									<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>	
+									<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
 								<a class="button" href="#">Хочу варенье!</a>
 						</div>
 						<div class="banner banner-right">
 								<h2 class="visually-hidden">Акционные предложения по наполнителям к мороженому</h2> <!--Скрытый заголовок-->
 									<h3>Шоколадки даром!</h3>
-									<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>	
+									<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
 							<a class="button" href="#">Хочу шоколадки!</a>
 						</div>
 					</section>
 
 				<!--2.3 HITS-->
-				<section class="hit-list-wrapper">
+				<section class="list-wrapper">
 					<h2 class="visually-hidden">Хиты продаж</h2>
 					<!--1st item-->
-					<article class="hit-item-block">
+					<article class="item-block">
 					<h2 class="visually-hidden">Первый хит продаж</h2>
-						<div class="hit-preview">
-							<div class="hit-item-photo">
+						<div class="preview">
+							<div class="item-photo hit-item-photo">
 								<img src="img/item1_orange_hit1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 								<p class="price"><span>310&#8381;</span>/кг</p>
 							</div>
-							<a class="hit-item-name" href="#">
+							<a class="item-name" href="#">
 								Сливочное с апельсиновым джемом и цитрусовой стружкой
 							</a>
 						</div>
 						<div class="overlay">
-								<a class="button index-btn" href="#">Быстрый просмотр</a> 
-						</div>	
-					</article> 
+								<a class="button index-btn" href="#">Быстрый просмотр</a>
+						</div>
+					</article>
 					<!--2nd item-->
-					<article class="hit-item-block">
+					<article class="item-block">
 					<h2 class="visually-hidden">Второй хит продаж</h2>
-						<div class="hit-preview">
-							<div class="hit-item-photo">
+						<div class="preview">
+							<div class="item-photo hit-item-photo">
 								<img src="img/item2_coffe_chocolate_hit2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
 								<p class="price"><span>380&#8381;</span>/кг</p>
 							</div>
-							<a class="hit-item-name" href="#">
+							<a class="item-name" href="#">
 								Сливочно-кофейное с кусочками шоколада
 							</a>
 						</div>
 						<div class="overlay">
-								<a class="button index-btn" href="#">Быстрый просмотр</a> 
-						</div>	
+								<a class="button index-btn" href="#">Быстрый просмотр</a>
+						</div>
 					</article>
 					<!--3rd item-->
-					<article class="hit-item-block">
+					<article class="item-block">
 					<h2 class="visually-hidden">Третий хит продаж</h2>
-						<div class="hit-preview">
-							<div class="hit-item-photo">
+						<div class="preview">
+							<div class="item-photo hit-item-photo">
 								<img src="img/item3_strawberry_white_chocolate_hit3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
 								<p class="price"><span>355&#8381;</span>/кг</p>
 							</div>
-							<a class="hit-item-name" href="#">
+							<a class="item-name" href="#">
 								Сливочно-клубничное с присыпкой из белого шоколада
 							</a>
 						</div>
-						<div class="overlay"> 
-								<a class="button index-btn" href="#">Быстрый просмотр</a>  
-						</div>	
+						<div class="overlay">
+								<a class="button index-btn" href="#">Быстрый просмотр</a>
+						</div>
 					</article>
 					<!--4th item-->
-					<article class="hit-item-block">
+					<article class="item-block">
 					<h2 class="visually-hidden">Четвертый хит продаж</h2>
-						<div class="hit-preview">
-							<div class="hit-item-photo">
-								<img src="img/item4_creme_brulee_hit4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливко">
+						<div class="preview">
+							<div class="item-photo hit-item-photo">
+								<img src="img/item4_creme_brulee_hit4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
 								<p class="price"><span>415&#8381;</span>/кг</p>
 							</div>
-							<a class="hit-item-name" href="#">
-								Сливочное крем-брюле с карамельной подливко
+							<a class="item-name" href="#">
+								Сливочное крем-брюле с карамельной подливкой
 							</a>
 						</div>
 						<div class="overlay">
-								<a class="button index-btn" href="#">Быстрый просмотр</a> 
-						</div>	
-					</article> 
-				</section>	
+								<a class="button index-btn" href="#">Быстрый просмотр</a>
+						</div>
+					</article>
+				</section>
 				<!--2.4 Преимушества компании-->
 				<section class="seo">
 					<h2 class="visually-hidden">Преимушества компании</h2><!--скрытый заголовок-->
@@ -191,9 +190,9 @@
 								<h3 class="visually-hidden">3.Поставщики</h3> <!--скрытый заголовок-->
 								<p class="contractors">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
 								<h3 class="visually-hidden">4.Доставка</h3> <!--скрытый заголовок-->
-								<p class="delivery">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>	
+								<p class="delivery">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
 						</div>
-					</div>	
+					</div>
 				</section>
 
 				<!--2.5 Дополнительная информация-->
@@ -212,21 +211,18 @@
 											<label class="visually-hidden" for="email"></label> <!--скрытый лейбл-->
 											<input id="email" type="email" name="email" placeholder="Электронная почта">
 
-											<button class="button" title="submit" name="subscription-btn">Отправить</button>		
+											<button class="button" title="submit" name="subscription-btn">Отправить</button>
 									</form>
-						</div>	 
+						</div>
 					</article>
 				</section>
-		</div>		
+		</div>
 				<!--2.6 Карта, адрес и контакты-->
-				<section class="map-container">	
-					<div class="map-image">
-							<img src="img/map.jpg" width="1200" height="430" alt="Адрес: ул.Большая Конюшенная 19/8, Санкт-Петербург"> 
-						</a>
-						<div class="location-icon">
-								<img src="img/svg-gllacy/pin.svg" width="80" height="240" alt="Месторасположение на карте - ул.Большая Конюшенная 19/8">
-						</div>
-					</div>
+				<section class="map-container">
+          <h2 class="visually-hidden">контактная информация</h2>
+          <!-- <img src="img/map.jpg" width="1200" height="430" alt="Адрес: ул.Большая Конюшенная 19/8, Санкт-Петербург">  -->
+          <iframe class="contacts-map" src="https://yandex.ru/map-widget/v1/-/CBazqBwqcD" height="429"></iframe>
+          <div class="container">
 					<div class="map-contacts">
 						<div class="map-contacts-info">
 							<h3 class="visually-hidden">Контакты</h3>
@@ -242,6 +238,7 @@
 							<a class="button feedback-button" href="feedback.html">Форма обратной связи</a>
 						</div>
 					</div>
+          </div>
 				</section>
 
 		<!--3. Подвал-->
@@ -280,7 +277,7 @@
 						<a class="menu-production" href="#"><span>О производстве</span></a>
 						<a class="menu-eco" href="#"><span>Экологические стандарты</span></a>
 					</div>
-					
+
 				</div>
 				<div class="footer-copyright">
 					<h2 class="visually-hidden">Copyright</h2>
@@ -291,16 +288,18 @@
 				</div>
 			</div>
 		</footer>
-	
+
 		<!--***MODAL WINDOWS***-->
 		<!--***Feedback modal window***-->
+    <div class="pre-form"></div>
+
 		<section class="modal modal-feedback">
 			<button class="modal-feedback-close" type="button">Закрыть</button>
 			<h2>Мы обязательно вам ответим!</h2>
 				<div class="feedback-form-box">
 					<form class="modal-login-form" action="https://echo.htmlacademy.ru" method="post">
 		        <label class="feedback-label">
-		          <input type="text" name="login" placeholder="Как вас зовут?">
+		          <input type="text" name="name" placeholder="Как вас зовут?">
 		        </label>
 		        <label class="feedback-label">
 		          <input type="text" name="email" placeholder="Ваша почта для ответа?">
@@ -310,92 +309,11 @@
 		        </label>
 		        <button class="button feedback-submit" type="button">Отправить</button>
 		      </form>
-		    </div> 
-	      <div class="modal-overlay feedback-overlay"></div>
+		    </div>
 		</section>
-	</div>	
+	</div>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
 
 
-
-<!-- 		<div class="modal-windows">
-			<div class="modal modal-catalog">
-				<h2 class="visually-hidden">Выпадающее меню "Каталог"</h2> 
-					<ul class="menu-catalog">
-						<li>
-							<a class="catalog-article" href="#">Новинки</a>
-						</li>
-						<li>
-							<a href="catalog.html">Сливочное</a>
-						</li>
-						<li>
-							<a href="#">Щербеты</a>
-						</li>
-						<li>
-							<a href="#">Фруктовый лед</a>
-						</li>
-						<li>
-							<a href="#">Мелорин</a>
-						</li>
-					</ul>
-			</div>
-
-			<div class="modal modal-search">
-					<h2 class="visually-hidden">Окно "Поиск" </h2> 
-					<form name="search" action="https://echo.htmlacademy.ru" method="get">
-						<label for="search" class="visually-hidden">Поиск</label> 
-						<input class="input search" id="search" type="text" name="search" placeholder="Что ищем?"><img src="img/svg-gllacy/loupe.svg" alt="Поиск">
-					</form>
-			</div>
-
-			<div class="modal modal-login">
-		      <h2 class="visually-hidden">Личный кабинет</h2> 
-		      <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
-				  	<label for="email" class="visually-hidden">Электронная почта</label> 
-				  	<input class="input email" type="email" name="email" placeholder="Электронная почта"><br/>
-				  	<label for="password" class="visually-hidden">Пароль</label> 
-				  	<input class="input password" type="password" name="password" placeholder="Пароль"><br/>
-				  	<button class="button" name="submit" value="Войти">Войти</button><br/>
-				  	<a href="#">Забыли пароль?</a><br/>
-				  	<a href="#">Новая регистрация</a>
-					</form>	
-		  </div>
-		    Модaльное окно "Корзина"
-		    <div class="modal modal-basket">
-		    	<h2 class="visually-hidden">Корзина с товарами</h2>
-		        <form class="modal modal-basket" name="basket"  action="https://echo.htmlacademy.ru" method="post">
-		        	<div class="modal-basket-name"> 
-			        	<label for="basket">Корзина с товарами</label>
-			        	<button id="basket" type="button">
-			        	<img src="img/svg-gllacy/basket-red.svg" alt="Товары в корзине">2 товара
-			        	</button>
-			        </div>	
-		        	<table class="checked-items">
-		        		<caption class="visually-hidden">Выбранные товары</caption> 
-		        		<tr>
-		        			<td><img src="img/svg-gllacy/cross-small.svg" alt="Закрыть"></td>
-		        			<td><img src="img/styleguide/orange-jam.jpg" alt="Пломбир с апрельсиновым джемом"></td>
-		        			<td>Пломбир с апрельсиновым джемом</td>
-		        			<td>1,5 кг</td>
-		        			<td>x</td>
-		        			<td>200 руб.</td>
-		        			<td>300 руб.</td>
-		        		</tr>
-		        		<tr>
-		        			<td><img src="img/svg-gllacy/cross-small.svg" alt="Закрыть"></td>
-		        			<td><img src="img/styleguide/strawberry-white-chocolate.jpg" alt="Клубничный пломбир с присыпкой из белого шоколада"></td>
-		        			<td>Клубничный пломбир с присыпкой из белого шоколада</td>
-		        			<td>1,5 кг</td>
-		        			<td>x</td>
-		        			<td>300 руб.</td>
-		        			<td>450 руб.</td>
-		        		</tr>
-		        		<tr>
-		        			<td colspan="5"></td>
-		        			<td colspan="2">Итого: 750 руб.</td>
-		        		</tr>	
-		        	</table>
-		        		<button class="button" type="submit">Оформить заказ</button>
-		        </form>  
-		    </div> -->  
